update resource files path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/style/main.css">
+    <link rel="stylesheet" href="./src/style/main.css">
     <title>Fake ATM</title>
 </head>
 
@@ -105,27 +105,27 @@
 
 
     <!-- Load scripts in CORRECT ORDER -->
-    <script src="/src/models/BaseModel.js"></script>
-    <script src="/src/generators/BaseGenerator.js"></script>
-
-    <script src="/src/models/FinancialInstrument.js"></script>
-    <script src="/src/models/Currency.js"></script>
-    <script src="/src/models/Transaction.js"></script>
+    <script src="./src/models/BaseModel.js"></script>
+    <script src="./src/generators/BaseGenerator.js"></script>
+    
+    <script src="./src/models/FinancialInstrument.js"></script>
+    <script src="./src/models/Currency.js"></script>
+    <script src="./src/models/Transaction.js"></script>
 
     <script src="/src/models/Account.js"></script>
     <script src="/src/models/AtmManager.js"></script>
 
-    <script src="/src/models/Card.js"></script>
-    <script src="/src/models/CurrencyNote.js"></script>
-    <script src="/src/models/Receipt.js"></script>
+    <script src="./src/models/Card.js"></script>
+    <script src="./src/models/CurrencyNote.js"></script>
+    <script src="./src/models/Receipt.js"></script>
 
-    <script src="/src/generators/CardGenerator.js"></script>
+    <script src="./src/generators/CardGenerator.js"></script>
 
-    <script src="/src/ui/BaseUI.js"></script>
-    <script src="/src/ui/AtmStateManager.js"></script>
-    <script src="/src/ui/AtmMachineUI.js"></script>
+    <script src="./src/ui/BaseUI.js"></script>
+    <script src="./src/ui/AtmStateManager.js"></script>
+    <script src="./src/ui/AtmMachineUI.js"></script>
 
-    <script src="/src/app.js"></script>
+    <script src="./src/app.js"></script>
 
     <!-- Update the inline script -->
     <script>
