added github pages deployment path

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     <script src="./src/models/Currency.js"></script>
     <script src="./src/models/Transaction.js"></script>
 
-    <script src="/src/models/Account.js"></script>
-    <script src="/src/models/AtmManager.js"></script>
+    <script src="./src/models/Account.js"></script>
+    <script src="./src/models/AtmManager.js"></script>
 
     <script src="./src/models/Card.js"></script>
     <script src="./src/models/CurrencyNote.js"></script>
